# PolyMangoBot

./: .gitignore  .pre-commit-config.yaml  ANALYSIS_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REPORT.html  COMPLETION_SUMMARY.txt  DELIVERABLES_v2.0.txt  DEPENDENCIES_AND_SETUP.md  DEPLOYMENT_SUMMARY.txt  EXECUTION_FIX.md  FEATURES_v2.0.md  FINAL_COMPLETION.md  FINAL_SUMMARY.txt  GETTING_STARTED.txt  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_SUCCESS.txt  PROJECT_COMPLETION_VERIFICATION.md  QUICKSTART_v2.0.md  QUICK_REFERENCE.md  README.md  README_V2.md  README_v2.0.md  START_HERE.md  STATUS.md  STATUS_REPORT.txt  advanced_api_fetcher.py  advanced_execution_strategies.py  advanced_fee_estimator.py  advanced_kelly_sizer.py  advanced_liquidity_scorer.py  advanced_ml_predictor.py  advanced_mm_tracker.py  advanced_order_executor.py  advanced_venue_analyzer.py  advanced_websocket_manager.py  api_connectors.py  async_logging.py  capital_efficiency_manager.py  (+38 more)
.claude/: settings.local.json
Notes/: Implementation Plan.txt  Instructions.txt
docs/: PITCH_DECK.md  PRODUCT_SPECIFICATION.md  pitch_deck.html  product_specification.html  trading_guide.html
inference/: __init__.py  arb_monitor.py  detection_rules.py  engine.py  family_discovery.py  llm_classifier.py  models.py  realizable_edge.py  relationship.py  trade_constructor.py
tests/: __init__.py  e2e_inference_test.py  test_api_connectors.py  test_config.py  test_health.py  test_inference.py  test_kelly.py  test_security.py  test_utils.py
